# FeedHound

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: cd5c3281b795_create_source_table.py
app/: __init__.py  celery_app.py  main.py
app/api/v1/: __init__.py  auth.py  news.py  source.py  users.py
app/core/: logging.py  security.py
app/crud/: news.py  source.py  sync_news.py  sync_source.py  users.py
app/db/: base.py  session.py
app/dependencies/: auth.py
app/models/: news.py  source.py  users.py
app/parsers/: news_parser.py  sync_news_parser.py
app/schemas/: news.py  source.py  users.py
app/tasks/: parser.py  tasks.py
tests/: conftest.py  test_api_endpoints.py  test_crud_news.py  test_crud_source.py  test_crud_users.py  test_news_parser.py  test_parser_task.py  test_security.py
